(lang dune 3.1)

(name register_allocator)

(generate_opam_files true)

(source
 (github EruEri/register-allocator))

(authors "EruEri")

(maintainers "EruEri")

(license LGPL-2.1-or-later)

(package
 (name register_allocator)
 (synopsis "A register allocator project")
 (description "A register allocator project")
 (depends ocaml dune)
)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
