;**********************************************************************************************;
;*                                                                                            *;
;* This file is part of kosu-register-allocator                                               *;
;* Copyright (C) 2022-2023 Yves Ndiaye                                                        *;
;*                                                                                            *;
;* kosu-register-allocator is free software: you can redistribute it and/or modify            *;
;*  it under the terms either:                                                                *;
;*                                                                                            *;
;*    - the GNU General Public License as published by the Free Software Foundation,          *;
;*        either version 3 of the License, or (at your option) any later version              *;
;*   or                                                                                       *;
;*                                                                                            *;
;*     - the GNU Lesser General Public License as published by the Free Software Foundation,  *;
;*        either version 3 of the License, or (at your option) any later version              *;
;*                                                                                            *;
;* kosu-register-allocator is distributed in the hope that it will be useful,                 *;
;*   but WITHOUT ANY WARRANTY;                                                                *;
;* without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR           *;
;* PURPOSE.  See the GNU General Public License for more details.                             *;
;* You should have received a copy of the GNU General Public License along                    *;
;* with kosu-register-allocator. If not, see <http://www.gnu.org/licenses/>.                  *;
;*                                                                                            *;
;**********************************************************************************************;

(library
 (public_name kosu_register_allocator)
 (name kosuRegisterAllocator)
 (modules cfg kosuRegisterAllocator util graph livenessInfo constraint)
 (private_modules util livenessInfo constraint))
