;**********************************************************************************************;
;*                                                                                            *;
;* This file is part of San: A 3 address code language/compiler                               *;
;* Copyright (C) 2023 Yves Ndiaye                                                             *;
;*                                                                                            *;
;* San is free software: you can redistribute it and/or modify it under the terms             *;
;* of the GNU General Public License as published by the Free Software Foundation,            *;
;* either version 3 of the License, or (at your option) any later version.                    *;
;*                                                                                            *;
;* San is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;           *;
;* without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR           *;
;* PURPOSE.  See the GNU General Public License for more details.                             *;
;* You should have received a copy of the GNU General Public License along with San.          *;
;* If not, see <http://www.gnu.org/licenses/>.                                                *;
;*                                                                                            *;
;**********************************************************************************************;

(rule
 (enabled_if
  (= %{profile} san))
 (target lexer.ml)
 (deps lexer.mll)
 (action
  (chdir
   %{workspace_root}
   (run %{bin:ocamllex} -q -o %{target} %{deps}))))

(rule
 (enabled_if
  (= %{profile} san))
 (targets parser.ml parser.mli)
 (deps parser.mly)
 (action
  (chdir
   %{workspace_root}
   (run %{bin:menhir} --table %{deps}))))

(library
 (name sanLang)
 (enabled_if
  (= %{profile} san))
 (modules lexer parser sanAst sanCli sanParser sanError)
 (libraries menhirLib kosu_register_allocator cmdLiner))
